variable_template/app_manifest.template.yml
# This yaml file will define the deploymnent and service manifests of the eks-app

apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp
spec:
  replicas: 1
  selector:
    matchLabels:

      # Deployment manages Pods with the label app=eks-app
      app: eks-app              
  template:
    metadata:
      labels:

        # Every Pod created by this Deployment gets app=eks-app
        app: eks-app            
    spec:
      nodeSelector:

        # Pod MUST run on a node with role=app_worker
        role: app_worker       
        
      containers:
      - name: my-webapp
        image: "${APP_IMAGE}"
        ports:
        - containerPort: 80



---



apiVersion: v1
kind: Service
metadata:
  name: eks-app-svc

  # The ALB health check path defaults to '/' because that’s the standard behavior of the AWS Load Balancer Controller when creating a target group from a Kubernetes Service. 
  # It doesn’t automatically know which path is appropriate for the application. It just uses the root by convention. So I need to configure the correct health check path for my app either; 
  # Automatically using this yml manifest as shown below OR Manually using the CLI: kubectl annotate svc <service_name> -n default alb.ingress.kubernetes.io/healthcheck-path=/health 
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health
spec:
  selector:

    # Send traffic to Pods with label: app=eks-app
    app: eks-app                
  ports:
    - protocol: TCP

      # Port exposed by the Service
      port: 80        

      # Port on the application Pod          
      targetPort: 80       

  # Internal Kubernetes access only. Loadbalacer exposes the service to the outside world     
  type: ClusterIP
